[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmetric"
version = "0.1.0"
description = "Open-source Life Cycle Assessment engine with data science analytics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alan Nguyen"}
]
keywords = ["lca", "life-cycle-assessment", "sustainability", "environmental-impact", "data-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4", "shap>=0.44"]
viz = ["matplotlib>=3.8", "seaborn>=0.13", "plotly>=5.18", "imageio>=2.34", "pillow>=10.0"]
geo = ["geopandas>=0.14", "shapely>=2.0"]
api = ["fastapi>=0.109", "uvicorn>=0.27", "pydantic>=2.5"]
dashboard = ["streamlit>=1.30"]
notebooks = ["jupyter>=1.0", "nbconvert>=7.0"]
test = ["pytest>=8.0", "httpx>=0.27", "openmetric[api]"]
all = [
    "openmetric[ml,viz,geo,api,dashboard,notebooks,test]",
]

[tool.setuptools.packages.find]
include = ["openmetric*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
